src/expression/parser/AggregateExpressionParser.js
// Generated from src/expression/grammar/AggregateExpression.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import AggregateExpressionVisitor from './AggregateExpressionVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class AggregateExpressionParser extends antlr4.Parser {

    static grammarFileName = "AggregateExpression.g4";
    static literalNames = [ null, null, null, null, null, "'('", "')'", 
                            "'{'", "'}'", "'['", "']'", "','", "'.'", "'@'", 
                            "'#'", "'$'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                            "'?'", "':'", "'=='", "'!='", "'~='", "'<'", 
                            "'>'", "'<='", "'>='", "'>>'", "'>>>'", "'<<'", 
                            "'||'", "'&&'", "'!'", "'|'", "'^'", "'&'", 
                            "'~'", null, null, null, "'/*'", "'*/'" ];
    static symbolicNames = [ null, "INTEGER_LITERAL", "FLOATING_POINT_LITERAL", 
                             "STRING_LITERAL", "UNCLOSED_STRING_LITERAL", 
                             "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                             "RBRACKET", "COMMA", "DOT", "AT", "HASH", "DOLLAR", 
                             "PLUS", "MINUS", "MUL", "DIV", "MOD", "QUESTION", 
                             "COLON", "EQ", "NE", "MATCH", "LT", "GT", "LTE", 
                             "GTE", "RIGHT_SHIFT", "URIGHT_SHIFT", "LEFT_SHIFT", 
                             "OR", "AND", "NOT", "BITWISE_OR", "BITWISE_XOR", 
                             "BITWISE_AND", "BITWISE_NOT", "TRUE", "FALSE", 
                             "NULL", "MLC_START", "MLC_END", "WHITESPACE", 
                             "COMMENT_MULTILINE", "COMMENT_LINE", "IDENTIFIER", 
                             "UNMATCHED" ];
    static ruleNames = [ "compilationUnit", "expression", "functionExpression", 
                         "functionReferenceExpression", "actionReferenceExpression", 
                         "eventReferenceExpression", "referenceSchema", 
                         "referenceServer", "referenceContextMask", "referenceEntity", 
                         "referenceRow", "referenceProperty", "valueReference", 
                         "arguments", "agIdentifier", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = AggregateExpressionParser.ruleNames;
        this.literalNames = AggregateExpressionParser.literalNames;
        this.symbolicNames = AggregateExpressionParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 1:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 22);
    		case 1:
    			return this.precpred(this._ctx, 21);
    		case 2:
    			return this.precpred(this._ctx, 20);
    		case 3:
    			return this.precpred(this._ctx, 19);
    		case 4:
    			return this.precpred(this._ctx, 18);
    		case 5:
    			return this.precpred(this._ctx, 17);
    		case 6:
    			return this.precpred(this._ctx, 16);
    		case 7:
    			return this.precpred(this._ctx, 15);
    		case 8:
    			return this.precpred(this._ctx, 14);
    		case 9:
    			return this.precpred(this._ctx, 13);
    		case 10:
    			return this.precpred(this._ctx, 12);
    		case 11:
    			return this.precpred(this._ctx, 11);
    		case 12:
    			return this.precpred(this._ctx, 10);
    		case 13:
    			return this.precpred(this._ctx, 9);
    		case 14:
    			return this.precpred(this._ctx, 8);
    		case 15:
    			return this.precpred(this._ctx, 7);
    		case 16:
    			return this.precpred(this._ctx, 6);
    		case 17:
    			return this.precpred(this._ctx, 5);
    		case 18:
    			return this.precpred(this._ctx, 4);
    		case 19:
    			return this.precpred(this._ctx, 3);
    		case 20:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	compilationUnit() {
	    let localctx = new CompilationUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, AggregateExpressionParser.RULE_compilationUnit);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AggregateExpressionParser.INTEGER_LITERAL) | (1 << AggregateExpressionParser.FLOATING_POINT_LITERAL) | (1 << AggregateExpressionParser.STRING_LITERAL) | (1 << AggregateExpressionParser.LPAREN) | (1 << AggregateExpressionParser.LBRACE) | (1 << AggregateExpressionParser.MINUS))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (AggregateExpressionParser.NOT - 35)) | (1 << (AggregateExpressionParser.BITWISE_NOT - 35)) | (1 << (AggregateExpressionParser.TRUE - 35)) | (1 << (AggregateExpressionParser.FALSE - 35)) | (1 << (AggregateExpressionParser.NULL - 35)) | (1 << (AggregateExpressionParser.IDENTIFIER - 35)))) !== 0)) {
	            this.state = 32;
	            this.expression(0);
	        }

	        this.state = 35;
	        this.match(AggregateExpressionParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 2;
	    this.enterRecursionRule(localctx, 2, AggregateExpressionParser.RULE_expression, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case AggregateExpressionParser.LPAREN:
	            localctx = new ExpressionNodeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 38;
	            this.match(AggregateExpressionParser.LPAREN);
	            this.state = 39;
	            this.expression(0);
	            this.state = 40;
	            this.match(AggregateExpressionParser.RPAREN);
	            break;
	        case AggregateExpressionParser.IDENTIFIER:
	            localctx = new FunctionNodeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 42;
	            this.functionExpression();
	            break;
	        case AggregateExpressionParser.LBRACE:
	            localctx = new ValueReferenceNodeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 43;
	            this.match(AggregateExpressionParser.LBRACE);
	            this.state = 44;
	            this.valueReference();
	            this.state = 45;
	            this.match(AggregateExpressionParser.RBRACE);
	            break;
	        case AggregateExpressionParser.MINUS:
	            localctx = new UnaryNodeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 47;
	            this.match(AggregateExpressionParser.MINUS);
	            this.state = 48;
	            this.expression(25);
	            break;
	        case AggregateExpressionParser.BITWISE_NOT:
	            localctx = new BitwiseNotNodeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 49;
	            this.match(AggregateExpressionParser.BITWISE_NOT);
	            this.state = 50;
	            this.expression(24);
	            break;
	        case AggregateExpressionParser.NOT:
	            localctx = new LogicalNotNodeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 51;
	            this.match(AggregateExpressionParser.NOT);
	            this.state = 52;
	            this.expression(23);
	            break;
	        case AggregateExpressionParser.INTEGER_LITERAL:
	        case AggregateExpressionParser.FLOATING_POINT_LITERAL:
	        case AggregateExpressionParser.STRING_LITERAL:
	        case AggregateExpressionParser.TRUE:
	        case AggregateExpressionParser.FALSE:
	        case AggregateExpressionParser.NULL:
	            localctx = new LiteralExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 53;
	            this.literal();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 124;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 122;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new MulNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 56;
	                    if (!( this.precpred(this._ctx, 22))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 22)");
	                    }
	                    this.state = 57;
	                    this.match(AggregateExpressionParser.MUL);
	                    this.state = 58;
	                    this.expression(23);
	                    break;

	                case 2:
	                    localctx = new DivNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 59;
	                    if (!( this.precpred(this._ctx, 21))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 21)");
	                    }
	                    this.state = 60;
	                    this.match(AggregateExpressionParser.DIV);
	                    this.state = 61;
	                    this.expression(22);
	                    break;

	                case 3:
	                    localctx = new ModNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 62;
	                    if (!( this.precpred(this._ctx, 20))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 20)");
	                    }
	                    this.state = 63;
	                    this.match(AggregateExpressionParser.MOD);
	                    this.state = 64;
	                    this.expression(21);
	                    break;

	                case 4:
	                    localctx = new AddNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 65;
	                    if (!( this.precpred(this._ctx, 19))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 19)");
	                    }
	                    this.state = 66;
	                    this.match(AggregateExpressionParser.PLUS);
	                    this.state = 67;
	                    this.expression(20);
	                    break;

	                case 5:
	                    localctx = new SubtractNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 68;
	                    if (!( this.precpred(this._ctx, 18))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 18)");
	                    }
	                    this.state = 69;
	                    this.match(AggregateExpressionParser.MINUS);
	                    this.state = 70;
	                    this.expression(19);
	                    break;

	                case 6:
	                    localctx = new RightShiftNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 71;
	                    if (!( this.precpred(this._ctx, 17))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 17)");
	                    }
	                    this.state = 72;
	                    this.match(AggregateExpressionParser.RIGHT_SHIFT);
	                    this.state = 73;
	                    this.expression(18);
	                    break;

	                case 7:
	                    localctx = new UnsignedRightShiftNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 74;
	                    if (!( this.precpred(this._ctx, 16))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 16)");
	                    }
	                    this.state = 75;
	                    this.match(AggregateExpressionParser.URIGHT_SHIFT);
	                    this.state = 76;
	                    this.expression(17);
	                    break;

	                case 8:
	                    localctx = new LeftShiftNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 77;
	                    if (!( this.precpred(this._ctx, 15))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 15)");
	                    }
	                    this.state = 78;
	                    this.match(AggregateExpressionParser.LEFT_SHIFT);
	                    this.state = 79;
	                    this.expression(16);
	                    break;

	                case 9:
	                    localctx = new LTNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 80;
	                    if (!( this.precpred(this._ctx, 14))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 14)");
	                    }
	                    this.state = 81;
	                    this.match(AggregateExpressionParser.LT);
	                    this.state = 82;
	                    this.expression(15);
	                    break;

	                case 10:
	                    localctx = new GTNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 83;
	                    if (!( this.precpred(this._ctx, 13))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 13)");
	                    }
	                    this.state = 84;
	                    this.match(AggregateExpressionParser.GT);
	                    this.state = 85;
	                    this.expression(14);
	                    break;

	                case 11:
	                    localctx = new LENodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 86;
	                    if (!( this.precpred(this._ctx, 12))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 12)");
	                    }
	                    this.state = 87;
	                    this.match(AggregateExpressionParser.LTE);
	                    this.state = 88;
	                    this.expression(13);
	                    break;

	                case 12:
	                    localctx = new GENodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 89;
	                    if (!( this.precpred(this._ctx, 11))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
	                    }
	                    this.state = 90;
	                    this.match(AggregateExpressionParser.GTE);
	                    this.state = 91;
	                    this.expression(12);
	                    break;

	                case 13:
	                    localctx = new EQNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 92;
	                    if (!( this.precpred(this._ctx, 10))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
	                    }
	                    this.state = 93;
	                    this.match(AggregateExpressionParser.EQ);
	                    this.state = 94;
	                    this.expression(11);
	                    break;

	                case 14:
	                    localctx = new NENodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 95;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 96;
	                    this.match(AggregateExpressionParser.NE);
	                    this.state = 97;
	                    this.expression(10);
	                    break;

	                case 15:
	                    localctx = new RegexMatchNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 98;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 99;
	                    this.match(AggregateExpressionParser.MATCH);
	                    this.state = 100;
	                    this.expression(9);
	                    break;

	                case 16:
	                    localctx = new BitwiseOrNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 101;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 102;
	                    this.match(AggregateExpressionParser.BITWISE_OR);
	                    this.state = 103;
	                    this.expression(8);
	                    break;

	                case 17:
	                    localctx = new BitwiseXorNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 104;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 105;
	                    this.match(AggregateExpressionParser.BITWISE_XOR);
	                    this.state = 106;
	                    this.expression(7);
	                    break;

	                case 18:
	                    localctx = new BitwiseAndNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 107;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 108;
	                    this.match(AggregateExpressionParser.BITWISE_AND);
	                    this.state = 109;
	                    this.expression(6);
	                    break;

	                case 19:
	                    localctx = new LogicalOrNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 110;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 111;
	                    this.match(AggregateExpressionParser.OR);
	                    this.state = 112;
	                    this.expression(5);
	                    break;

	                case 20:
	                    localctx = new LogicalAndNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 113;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 114;
	                    this.match(AggregateExpressionParser.AND);
	                    this.state = 115;
	                    this.expression(4);
	                    break;

	                case 21:
	                    localctx = new ConditionalNodeContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, AggregateExpressionParser.RULE_expression);
	                    this.state = 116;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 117;
	                    this.match(AggregateExpressionParser.QUESTION);
	                    this.state = 118;
	                    this.expression(0);
	                    this.state = 119;
	                    this.match(AggregateExpressionParser.COLON);
	                    this.state = 120;
	                    this.expression(3);
	                    break;

	                } 
	            }
	            this.state = 126;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	functionExpression() {
	    let localctx = new FunctionExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, AggregateExpressionParser.RULE_functionExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.match(AggregateExpressionParser.IDENTIFIER);
	        this.state = 128;
	        this.arguments();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionReferenceExpression() {
	    let localctx = new FunctionReferenceExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, AggregateExpressionParser.RULE_functionReferenceExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.agIdentifier();
	        this.state = 131;
	        this.arguments();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	actionReferenceExpression() {
	    let localctx = new ActionReferenceExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, AggregateExpressionParser.RULE_actionReferenceExpression);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.agIdentifier();
	        this.state = 135;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===AggregateExpressionParser.LPAREN) {
	            this.state = 134;
	            this.arguments();
	        }

	        this.state = 137;
	        this.match(AggregateExpressionParser.NOT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eventReferenceExpression() {
	    let localctx = new EventReferenceExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, AggregateExpressionParser.RULE_eventReferenceExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.agIdentifier();
	        this.state = 140;
	        this.match(AggregateExpressionParser.AT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	referenceSchema() {
	    let localctx = new ReferenceSchemaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, AggregateExpressionParser.RULE_referenceSchema);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(AggregateExpressionParser.IDENTIFIER);
	        this.state = 143;
	        this.match(AggregateExpressionParser.DIV);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


